Added search masks for JUnit in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
                         <configuration>
                             <includes>
                                 <include>**/*Service.class</include>
+                                <include>**/*ServiceImpl.class</include>
+                                <include>**/*Repository.class</include>
+                                <include>**/*RepositoryImpl.class</include>
                             </includes>
                         </configuration>
                     </execution>
